# fishjam-react-native-webrtc

./: .gitignore  AGENTS.md  FishjamReactNativeWebrtc.podspec  NOTICE  jest.config.ts  package-lock.json  package.json  react-native.config.js  tsconfig.json
.cursor/rules/: tdd-workflow.mdc
.github/workflows/: ci.yml  ios_ci.yml  release.yml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  FJAudioSinkInstaller.cpp  FJAudioSinkInstaller.h  FJVideoPushInstaller.cpp  FJVideoPushInstaller.h  ahardware_buffer_pool.cpp  custom_video_gl.cpp  placeholder.cpp
android/src/main/java/com/oney/WebRTCModule/: AHardwareBufferPool.java  AudioExtractionController.java  AudioOutputManager.java  CustomVideoBufferPool.java  CustomVideoCaptureController.java  CustomVideoFrameDelivery.java  FJAudioSinkInstaller.java  FJVideoPushInstaller.java  FrameRepeatingCapturerObserver.java  GetUserMediaImpl.java  MediaProjectionService.java  PIPHelperFragment.java  PIPManager.java  RTCVideoViewManager.java  ScreenCaptureController.java  WebRTCModule.java  WebRTCModuleOptions.java  WebRTCView.java
android/src/main/java/com/oney/WebRTCModule/foregroundService/: ForegroundServiceConfig.java  ForegroundServiceController.java  WebRTCForegroundService.java
android/src/test/java/com/oney/WebRTCModule/: TestInfrastructureSmokeTest.java
common/cpp/fishjam-audio/: FJAudioSinkJSI.cpp  FJAudioSinkJSI.h
common/cpp/fishjam-video/: FJVideoPushJSI.cpp  FJVideoPushJSI.h
docs/: custom-video-track.md  example.md
examples/GumTestApp/: App.js  h264DebugStatsPoller.js
examples/GumTestApp/android/: build.gradle
examples/GumTestApp/android/app/: build.gradle
ios/RCTWebRTC/: BroadcastPickerHelper.h  BroadcastPickerHelper.m  CallKitManager.h  CallKitManager.m  CapturerEventsDelegate.h  CustomVideoBufferPool.h  CustomVideoBufferPool.m  CustomVideoCaptureController.h  CustomVideoCaptureController.m  FJAudioSinkJSI.h  FJAudioSinkJSI.mm  FJMiniaudioSelfTest.mm  FishjamRTCAudioDevice.h  FishjamRTCAudioDevice.m  FishjamVoIPPush.h  FishjamVoIPPush.m  H264BackgroundSafeEncoder.h  H264BackgroundSafeEncoder.m  H264BackgroundSafeEncoderFactory.h  H264BackgroundSafeEncoderFactory.m  PIPController.h  PIPController.m  RTCVideoViewManager.m  ScreenCaptureController.h  ScreenCaptureController.m  ScreenCapturer.h  ScreenCapturer.m  VideoCaptureController.h  VideoCaptureController.m  VoIPPushManager.h  VoIPPushManager.m  VoipManager.h  VoipManager.m  WebRTCModule+AudioOutputDevices.m  WebRTCModule+AudioSink.mm  WebRTCModule+CallKit.h  WebRTCModule+CallKit.m  WebRTCModule+CustomVideo.mm  WebRTCModule+PushKit.h  WebRTCModule+PushKit.m  (+7 more)
ios/RCTWebRTC.xcodeproj/: project.pbxproj
ios/RCTWebRTC/AudioSinkShim/: NativeAudioTrackBridge.h  RTCMediaStreamTrack+Private.h  media_stream_interface.h  scoped_refptr.h
ios/RCTWebRTC/videoEffects/: H264DebugFrameCounter.h  H264DebugFrameCounter.m
release-automation/: bump-version.sh
src/: .eslintrc.cjs  AudioExtraction.ts  CallKit.ts  EventEmitter.ts  MediaDevices.ts  MediaStream.ts  MediaStreamTrack.ts  MediaStreamTrackEvent.ts  MessageEvent.ts  Permissions.ts  PushKit.ts  RTCDataChannel.ts  RTCDataChannelEvent.ts  RTCErrorEvent.ts  RTCIceCandidate.ts  RTCIceCandidateEvent.ts  RTCPIPView.tsx  RTCPeerConnection.ts  RTCRtpEncodingParameters.ts  RTCRtpParameters.ts  RTCRtpReceiver.ts  RTCRtpSendParameters.ts  RTCRtpSender.ts  RTCRtpTransceiver.ts  RTCTrackEvent.ts  RTCUtil.ts  RTCView.ts  ScreenCapturePickerView.ts  createCustomVideoTrack.ts  getDisplayMedia.ts  getUserMedia.ts  index.ts  presentLivestreamBroadcastPicker.ts  useAudioOutput.ts  useCallKit.ts  useForegroundService.ts  useLivestreamStatus.ts  useVoIPEvents.ts  writeLivestreamCredentials.ts
src/__mocks__/: event-emitter.ts  react-native.ts
src/__tests__/: callKit.test.ts
src/audioOutputManager/: AndroidAudioOutputManager.ts  AudioOutputManager.ts  IOSAudioOutputManager.ts  common.ts  index.ts
tests/ios/: Podfile
tests/ios/RCTWebRTCTests.xcodeproj/: project.pbxproj
tests/ios/RCTWebRTCTests.xcodeproj/xcshareddata/xcschemes/: RCTWebRTCTests.xcscheme
tests/ios/RCTWebRTCTests.xcworkspace/: contents.xcworkspacedata
tests/ios/Stubs/: ReactStubs.m
tests/ios/Stubs/React/: RCTBridgeModule.h  RCTEventEmitter.h  RCTLog.h
tests/ios/Stubs/WebRTC/: WebRTC.h
tests/ios/Tests/: AudioOutputDevicesTests.m
tools/: format.sh  test-android.sh  test-ios.sh
